fix: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-states",
+  "name": "use-states-react",
   "version": "1.0.0",
   "description": "react use states",
   "main": "lib/index.js",
